--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.14",
+    "@react-navigation/native-stack": "^7.3.20",
+    "axios": "^1.10.0",
     "expo": "~53.0.12",
     "expo-status-bar": "~2.2.3",
     "ionicons": "^8.0.9",
     "react": "19.0.0",
-    "react-native": "0.79.4"
+    "react-native": "0.79.4",
+    "react-native-safe-area-context": "4.14.0",
+    "react-native-screens": "4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
